--- a/app/src/main/res/values/api_information.xml
+++ b/app/src/main/res/values/api_information.xml
@@ -7,4 +7,5 @@
     <string name="api_poster_url">https://image.tmdb.org/t/p/w300</string>
     <string name="api_backdrop_url">https://image.tmdb.org/t/p/w780</string>
     <string name="api_movie_url">https://api.themoviedb.org/3/movie/</string>
+    <string name="youtube_video_url">https://www.youtube.com/watch</string>
 </resources>
